[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=1]

[node name="Main_Menu" type="Control"]
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Node" type="Node" parent="Node/VBoxContainer"]

[node name="Button_2x2" type="Button" parent="Node/VBoxContainer/Node"]
margin_right = 12.0
margin_bottom = 20.0
text = "Level 1 (2x2)"

[node name="Button_4x4" type="Button" parent="Node/VBoxContainer/Node"]
margin_right = 12.0
margin_bottom = 20.0
text = "Level 2 (4x4)"

[node name="Button_8x8" type="Button" parent="Node/VBoxContainer/Node"]
margin_right = 12.0
margin_bottom = 20.0
text = "Level 3 (8x8)"

[connection signal="pressed" from="Node/VBoxContainer/Node/Button_2x2" to="." method="_on_Button_2x2_pressed"]
[connection signal="pressed" from="Node/VBoxContainer/Node/Button_4x4" to="." method="_on_Button_4x4_pressed"]
[connection signal="pressed" from="Node/VBoxContainer/Node/Button_8x8" to="." method="_on_Button_8x8_pressed"]
